--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <img src="https://sportyakutia.ru/images/1fotoposel/1/7/ron.jpg">
         <p> На картинке изображен гол Криштиану Роналду который он забил за Реал Мадрид. Гол знает почти каждый фанат футбола. Гол был забит через себя это его и делает особенным. О этом голе голе говорили все это один из лучших голов в карьере Роналдо, в его карьере есть множество красивых голов был даже почти с 50 метров в то время он играл за Манчестер Юнайтед. </p>
 
-        <p> Есть тоже великий футболист Лео Месси у него было также много красивых голов большенство он забил за Барселону больше всего фанатам запомнился гол в котором он обошел почти всю команду соперника один и переиграл вратаря. Также он забил много красивых голов со штравного обычно он забивал левой ногой.
+        <p> Есть тоже великий футболист Лео Месси у него было также много красивых голов большенство он забил за Барселону больше всего фанатам запомнился гол в котором он обошел почти всю команду соперника один и переиграл вратаря. Также он забил много красивых голов со штравного обычно он забивал левой ногой.</p>
 
             <img src="https://img.championat.com/s/735x490/news/big/s/d/messi-vozglavil-rejting-luchshih-futbolistov-la-ligi-2010-h-godov-po-versii-fourfourtwo_1701888248525752568.jpg">
