--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         </header>
         <nav>
             <a class="nav-link" href="site1.html">1й сайт</a>
-            <a class="nav-link" href="site2.html">2й сайт</a>
             <a class="nav-link" href="site3.html">3й сайт</a>
             <a class="nav-link" href="autor.html">Об авторе</a>
         </nav>
@@ -20,25 +19,25 @@
                     <h2>1-ое место</h2>
                     <img src="https://uznayvse.ru/images/catalog/2022/7/diego-maradona_53.jpg"/>
                     <p>Диего Марадона</p>
-                    <a class="article-but" href="">Подробнее</a>
+                    <a class="article-but" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D1%80%D0%B0%D0%B4%D0%BE%D0%BD%D0%B0,_%D0%94%D0%B8%D0%B5%D0%B3%D0%BE_%D0%90%D1%80%D0%BC%D0%B0%D0%BD%D0%B4%D0%BE">Подробнее</a>
                 </article>
                 <article>
                     <h2>2-ое место</h2>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Pele_con_brasil_%28cropped%29.jpg/250px-Pele_con_brasil_%28cropped%29.jpg"/>
                     <p>Пеле</p>
-                    <a class="article-but" href="">Подробнее</a>
+                    <a class="article-but" href="https://ru.wikipedia.org/wiki/%D0%9F%D0%B5%D0%BB%D0%B5">Подробнее</a>
                 </article>
                 <article>
                     <h2>3-е место</h2>
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRek_S0O1EPYbP1Om6f3EpKd_n-FfPQweygHzRndCP3Kw&s"/>
                     <p>Зинедин Зидан</p>
-                    <a class="article-but" href="">Подробнее</a>
+                    <a class="article-but" href="https://ru.wikipedia.org/wiki/%D0%97%D0%B8%D0%B4%D0%B0%D0%BD,_%D0%97%D0%B8%D0%BD%D0%B5%D0%B4%D0%B8%D0%BD">Подробнее</a>
                 </article>
                 <article>
                     <h2>4-ое место</h2>
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_CHaC_FYx5OsNQiJvtRnI6-XBCqBZkWNz4_CJBOdZAA&s" >
                     <p>Криштиану Роналду</p>
-                    <a class="article-but" href="">Подробнее</a>
+                    <a class="article-but" href="https://ru.wikipedia.org/wiki/%D0%9A%D1%80%D0%B8%D1%88%D1%82%D0%B8%D0%B0%D0%BD%D1%83_%D0%A0%D0%BE%D0%BD%D0%B0%D0%BB%D0%B4%D1%83">Подробнее</a>
                 </article>
             </section>
         </main>
