--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>SigmaMarket</title>
+        <title>Football</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <h1>SigmaMarket</h1>
+            <h1>Football</h1>
         </header>
         <nav>
             <a class="nav-link" href="site1.html">1й сайт</a>
